unittest/bin/src/rl/tests/positive/pass_first_line.js
WScript.Echo("this test's result was: pass");
