unittest/bin/src/rl/tests/negative/pass_not_first_line.js
WScript.Echo("this is a message");
WScript.Echo("pass");